--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Portifólio</title>
+    
 </head>
 <body>
-    <h1>teste</h1>
+
+    <div class="container">
+        <header>
+            <div class="image-wrapper">
+                <img src="img/bg1.jpg" alt="">
+            </div>
+            <div class="banner">
+                <h1>Web Developer Front End</h1>
+                <p>José Wanderson </p>
+                <button>SAIBA MAIS</button>
+            </div>
+        </header>
+    </div>
+
 </body>
 </html>
